demo-app-dir/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
  namespace: demo-app
spec:
  selector:
    matchLabels:
      app: test-app
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: httpd
        image: httpd:alpine3.17
        ports:
        - containerPort: 80
