demo-app-dir/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testsvc
  labels:
    app: test-app
  namespace: demo-app
spec:
  selector:
    app: test-app
  ports:
  - protocol: TCP
     port: 80
     targetPort: 80
