demo-app-dir/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: test-ingress
  namespace: demo-app
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: testsvc
            port:
              number: 80
        path: /demo-app
        pathType: Prefix
